[tool.poetry]
name = "kyber"
version = "1.0.0"
description = "Implementation of Kyber encryption algorithm"
authors = ["Pyry Lahtinen <pyry@pyry.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pycryptodome = "^3.19.0"
coverage = "^7.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

# help pytest find modules (https://stackoverflow.com/a/49033954)
[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
